--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
 <body>
     
     <div class="navBar"><h2>Morrowind Trivia</h2></div>
-    <div class="fadeBox">
-        
-
+    <div class="fadeBox" style="text-align: center">
+        <div id = "timerBox"></div>
+        <div id = "Question"></div>
+        <button id = "aOne"></button>
+        <button id = "aTwo"></button>
+        <button id = "aThree"></button>
+        <button id = "aFour"></button>
     </div>
 
 
