--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <div class="navBar"><h2>Morrowind Trivia</h2></div>
     <div class="fadeBox"> 
-        <div id = "timerBox"></div>
+        <div id = "display"></div>
         <div id = "Question"></div>
 
         <div id = "start" onclick = "startQuiz()">
